css/main.css
/*****************************************************************************/
/*
/* Common
/*
/*****************************************************************************/

webkit-viewport {width:device-width}
@-moz-viewport {width:device-width}
@-ms-viewport {width:device-width}
@-o-viewport {width:device-width}
@viewport {width:device-width}


* {
	margin: 0px;
	padding: 0px;
}

body {
	font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
	background: url('/images/bk_body.jpg');
}

h1 {
	text-transform: uppercase;
}

h4 a {
	color: #333;
}

h4 a:hover {
	text-decoration: none;
}

h2 {
	text-transform: uppercase;
}

/* smaller titles on the post page  in mobile view */
@media(max-width:400px) {
	h2 {
		font-size: 20px;
		line-height: 1;
	}
}

h3 {
	margin-top: 40px;
	margin-bottom: 20px;
	text-transform: uppercase;
}

h4 {
	text-transform: uppercase;
	margin-top: 20px;
	margin-bottom: 10px;
}

h5 {
	text-transform: uppercase;
}

footer {
	background-color: #333;
	color: #F7F9F9;
	text-align: center;
	padding: 10px;
	margin-bottom: 50px;
}

footer a {
	text-decoration: none;
	color: #F7F9F9;
}

footer a:hover {
	color: #3FAEA5;
}


.hrbar {
	background: url('/images/bk_dotted_big.png') repeat-x center;
	padding-top:10px;
	padding-bottom:10px;
}




.nav-wrapper {
	box-shadow: 0px 10px 5px -6px #333;	
	background-color: #1b1b1b;
	margin-bottom: 10px;
	margin-left: -10px;
	margin-right: -10px;
}

nav {
	max-width: 1080px;
	margin-right: auto;
	margin-left: auto;
}

nav ul {
	list-style-type: none;
	margin-left: 0px;
}

nav ul li {
	display: inline-block;	
}

nav ul li a {
	text-transform: uppercase;	
	color: #3FAEA5;
	padding: 10px 17px 10px 17px;		
	display: inline-block;
}

nav ul li a:hover {
	text-decoration: none;
	color: #FCFCFC;
	background-color: #3FAEA5;
	box-shadow: 0px 4px 2px 0px #3FAEA5;
}

.logo {
	background: url('/images/bk_dotted_big.png') 0 100% repeat-x;
	padding-bottom: 10px;
	margin-bottom: 20px;
}

.logo-inner {
	max-width: 1060px;
	margin-right: auto;
	margin-left: auto;
}

.link-wrapper {
	float: right;
}


.logo img {
	float: left;
}

.logo ul {
	float: right;
	list-style-type: none;
	padding-right: 20px;
	padding-top: 20px;
}

.logo ul li {
	float:right;
}

/* center the logo and the social links when in small mode */
@media(max-width: 978px) {
	.link-wrapper {
		width: 100%;
		position: relative;
	}

	.logo ul {
		float: left;
    	margin-right:  auto;
    	margin-left: auto;
    	position: relative;
    	left: 50%;
	}

	.logo ul li {
		position: relative;
		right: 50%;
	}

	.logo img {
		float: none;
		display: block;
		margin: auto;
	}

	nav ul {
		text-align: center;
	}

	nav ul li:nth-last-child(1) {
		display: none;
	}
	nav ul li:nth-last-child(2) {
		display: none;
	}
}

/* override bootstrap default */
@media(max-width: 767px) {
	body {
		padding-right: 0px;
		padding-left: 0px;
	}
}

.logo ul li a {
	display: block;
	width: 50px;
	height: 50px;
}

.logo ul li a.twitter {
	background: url('/images/ico_social_twitter.png') 0 0 no-repeat;
	padding-right: 10px;
}

.logo ul li a.rss {
	background: url('/images/ico_social_rss.png') 0 0 no-repeat;
}

.logo ul li a.rss:hover, .logo ul li a.twitter:hover {
	background-position: 0 -49px;
}



/*****************************************************************************/
/*
/* archive
/*
/*****************************************************************************/

.dot {
	background: url('/images/bk_dotted_big.png') no-repeat center center;
}

.categories span:last-child {
	display: none;
	border: 1px solid lime;
}

/*****************************************************************************/
/*
/* Home
/*
/*****************************************************************************/

.excerpt {
	background-color: #F7F9F9;
	border: 4px solid #EEF2F2;
	padding: 10px;
	margin-bottom: 25px;
	position: relative;
}

.excerpt h4 {
	margin-bottom: 0px;
	margin-top: 0px;
}

.excerpt .read-more {
	bottom: -20px;
	right: 25px;
	position: absolute;
}

/*
 *	FEATURED POSTS
 */

#featured-posts {
	display: table-row;
}

#featured-posts .item {
	float:left;
	background:url(/images/featured_bubble.png) top right no-repeat;
	position:relative;
	max-width: 450px;
	margin-bottom: 20px;
}

@media (min-width:979px) {
	#featured-posts .item:first-child {
		margin-right: 25px;
	}
}

@media(max-width: 978px) {
	#featured-posts .item {
		margin-bottom: 75px;
	}
}

#featured-posts .item h4 {
	padding-right:80px;
	padding-top:5px;
	margin-top: 0px;
	max-width: 358px;
	min-height: 77px;
	height:70px;
	overflow: hidden;
	line-height: 1;
	text-transform: none;
	font-size: 24px;
}


@media(max-width: 978px) {
	#featured-posts .item h4 {
		height: auto;
	}
}

#featured-posts .item h4 a {
	color:#333;
}

#featured-posts .item h4 a:hover {
	text-decoration:none;
	color:#399B8C;
}

.read-more {
	display:block;
	width:46px;
	height:46px;
	position:absolute;
	text-indent:-9999px;
	background:url(/images/bk_readmore.png) 0 -46px no-repeat;
}


#featured-posts .item .read-more {
	right:30px;
	bottom:-20px;
}

.read-more:hover {
	background-position:0 0;
}

/*#featured-posts .item img {
	margin-right:15px; 
	border:10px solid #F7F9F9;
	border-radius:8px;
}*/

.featured-content {
	margin-right:15px; 
	background-color: #F7F9F9;
	border: 10px solid #EEF2F2;
	border-radius:8px;
	display: table-cell;
}

#featured-posts .item p {
	margin-top: 15px;
	margin-right: 10px;
	margin-left: 10px;
}


#main-content {
	max-width: 925px;
}

#content {
	clear: both;
	background-color: #F7F9F9;
	border: 8px solid #EEF2F2;
	padding: 20px;
	max-width: 1000px;
	margin-bottom: 50px;
}

@media(max-width: 978px) {
	#main-content {
		max-width: 450px;
	}
}


#content img {
	display: block;
	padding-bottom: 20px;
	padding-top: 20px;
}

ul.posts {
	list-style-type: none;
	margin-bottom: 2em;
}

ul.posts li {
	line-height: 1.75em;
}

ul.posts span {
	color: #aaa;
	font-family: Monaco, "Courier New", monospace;
	font-size: 80%;
}

/*****************************************************************************/
/*
/* Site
/*
/*****************************************************************************/

.site {
	font-size: 115%;
	text-align: justify;
	width: 42em;
	margin: 3em auto 2em;
	line-height: 1.5em;
}

.site .header a {
	font-weight: bold;
	text-decoration: none;
}

.site .header h1.title {
	display: inline-block;
	margin-bottom: 2em;
}

.site .header h1.title a {
	color: #a00;
}

.site .header h1.title a:hover {
	color: #000;
}

.site .header a.extra {
	color: #aaa;
	margin-left: 1em;
}

.site .header a.extra:hover {
	color: #000;
}

.site .meta {
	color: #aaa;
}

.site .footer {
	font-size: 80%;
	color: #666;
	border-top: 4px solid #eee;
	margin-top: 2em;
	overflow: hidden;
}

.site .footer .contact {
	float: left;
	margin-right: 3em;
}

.site .footer .contact a {
	color: #8085C1;
}

.site .footer .rss {
	margin-top: 1.1em;
	margin-right: -.2em;
	float: right;
}

.site .footer .rss img {
	border: 0;
}

/*****************************************************************************/
/*
/* Posts
/*
/*****************************************************************************/




.meta {
	text-transform: uppercase;
	color: #666;
	background: url('/images/bk_dotted_big.png') repeat-x;
	padding-bottom: 10px;
}

.posted-under ul {
	list-style-type: none;
}

.posted-under ul li {
	float: left;
}

.post-details span:after {
	content: ' • ';
}

.post-details span:last-child:after {
	content: '';
}

.post ul, .post ol {
	margin-left: 1.35em;
}

.social {
	margin-bottom: 10px;
}

.social > div {
	float:left;
	vertical-align: middle;
	width: 100px;	
}

#content .social img {
	padding-top: 0px;
	padding-bottom: 0px;
}

